5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1671_1105.log
== TEST (2019-04-22 15:30:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o==lobo):
	print("Entrada: ", o)
	print("Casa: ", Stark)
elif(o==leao):
	print("Entrada: ", o)
	print("Casa: ", Lannister)
elif(o==veado):
	print("Entrada: ", o)
	print("Casa: ", Baratheon)
elif(o==dragao):
	print("Entrada: ", o)
	print("Casa: ", Targaryen)
elif(o==rosa):
	print("Entrada: ", o)
	print("Casa: ", Tyrell)
elif(o==sol):
	print("Entrada: ", o)
	print("Casa: ", Martell)
elif(o==lula):
	print("Entrada: ", o)
	print("Casa: ", Greyjoy)
elif(o==esfolado):
	print("Entrada: ", o)
	print("Casa: ", Bolton)
elif(o==turta):
	print("Entrada: ", o)
	print("Casa: ", Tully)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(o==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:31:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=lobo):
	print("Entrada: ", o)
	print("Casa: ", Stark)
elif(o=leao):
	print("Entrada: ", o)
	print("Casa: ", Lannister)
elif(o=veado):
	print("Entrada: ", o)
	print("Casa: ", Baratheon)
elif(o=dragao):
	print("Entrada: ", o)
	print("Casa: ", Targaryen)
elif(o=rosa):
	print("Entrada: ", o)
	print("Casa: ", Tyrell)
elif(o=sol):
	print("Entrada: ", o)
	print("Casa: ", Martell)
elif(o=lula):
	print("Entrada: ", o)
	print("Casa: ", Greyjoy)
elif(o=esfolado):
	print("Entrada: ", o)
	print("Casa: ", Bolton)
elif(o=turta):
	print("Entrada: ", o)
	print("Casa: ", Tully)
-- ERROR:
File "XXXX", line 5
    if(o=lobo):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:32:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: ", Stark)
elif(o="leao"):
	print("Entrada: ", o)
	print("Casa: ", Lannister)
elif(o="veado"):
	print("Entrada: ", o)
	print("Casa: ", Baratheon)
elif(o="dragao"):
	print("Entrada: ", o)
	print("Casa: ", Targaryen)
elif(o="rosa"):
	print("Entrada: ", o)
	print("Casa: ", Tyrell)
elif(o="sol"):
	print("Entrada: ", o)
	print("Casa: ", Martell)
elif(o="lula"):
	print("Entrada: ", o)
	print("Casa: ", Greyjoy)
elif(o="esfolado"):
	print("Entrada: ", o)
	print("Casa: ", Bolton)
elif(o="turta"):
	print("Entrada: ", o)
	print("Casa: ", Tully)
-- ERROR:
File "XXXX", line 8
    elif(o="leao"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:32:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: ", Stark)
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: ", Lannister)
elif(o="veado"):
	print("Entrada: ", o)
	print("Casa: ", Baratheon)
elif(o="dragao"):
	print("Entrada: ", o)
	print("Casa: ", Targaryen)
elif(o="rosa"):
	print("Entrada: ", o)
	print("Casa: ", Tyrell)
elif(o="sol"):
	print("Entrada: ", o)
	print("Casa: ", Martell)
elif(o="lula"):
	print("Entrada: ", o)
	print("Casa: ", Greyjoy)
elif(o="esfolado"):
	print("Entrada: ", o)
	print("Casa: ", Bolton)
elif(o="turta"):
	print("Entrada: ", o)
	print("Casa: ", Tully)
-- ERROR:
File "XXXX", line 11
    elif(o="veado"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:32:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: ", Stark)
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: ", Lannister)
elif(o="veado"):
	print("Entrada: ", o)
	print("Casa: ", Baratheon)
elif(o="dragao"):
	print("Entrada: ", o)
	print("Casa: ", Targaryen)
elif(o="rosa"):
	print("Entrada: ", o)
	print("Casa: ", Tyrell)
elif(o="sol"):
	print("Entrada: ", o)
	print("Casa: ", Martell)
elif(o="lula"):
	print("Entrada: ", o)
	print("Casa: ", Greyjoy)
elif(o="esfolado"):
	print("Entrada: ", o)
	print("Casa: ", Bolton)
elif(o="turta"):
	print("Entrada: ", o)
	print("Casa: ", Tully)
-- ERROR:
File "XXXX", line 11
    elif(o="veado"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:32:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: ", Stark)
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: ", Lannister)
elif(o="veado"):
	print("Entrada: ", o)
	print("Casa: ", Baratheon)
elif(o="dragao"):
	print("Entrada: ", o)
	print("Casa: ", Targaryen)
elif(o="rosa"):
	print("Entrada: ", o)
	print("Casa: ", Tyrell)
elif(o="sol"):
	print("Entrada: ", o)
	print("Casa: ", Martell)
elif(o="lula"):
	print("Entrada: ", o)
	print("Casa: ", Greyjoy)
elif(o="esfolado"):
	print("Entrada: ", o)
	print("Casa: ", Bolton)
elif(o="turta"):
	print("Entrada: ", o)
	print("Casa: ", Tully)
-- ERROR:
File "XXXX", line 11
    elif(o="veado"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:33:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: ", Stark)
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: ", Lannister)
elif(o=="veado"):
	print("Entrada: ", o)
	print("Casa: ", Baratheon)
elif(o=="dragao"):
	print("Entrada: ", o)
	print("Casa: ", Targaryen)
elif(o=="rosa"):
	print("Entrada: ", o)
	print("Casa: ", Tyrell)
elif(o=="sol"):
	print("Entrada: ", o)
	print("Casa: ", Martell)
elif(o=="lula"):
	print("Entrada: ", o)
	print("Casa: ", Greyjoy)
elif(o=="esfolado"):
	print("Entrada: ", o)
	print("Casa: ", Bolton)
elif(o=="turta"):
	print("Entrada: ", o)
	print("Casa: ", Tully)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    print("Casa: ", Greyjoy)
NameError: name 'Greyjoy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:33:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: ", Stark)
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: ", Lannister)
elif(o=="veado"):
	print("Entrada: ", o)
	print("Casa: ", Baratheon)
elif(o=="dragao"):
	print("Entrada: ", o)
	print("Casa: ", Targaryen)
elif(o=="rosa"):
	print("Entrada: ", o)
	print("Casa: Tyrell")
elif(o=="sol"):
	print("Entrada: ", o)
	print("Casa: ", Martell)
elif(o=="lula"):
	print("Entrada: ", o)
	print("Casa: ", Greyjoy)
elif(o=="esfolado"):
	print("Entrada: ", o)
	print("Casa: ", Bolton)
elif(o=="turta"):
	print("Entrada: ", o)
	print("Casa: ", Tully)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    print("Casa: ", Greyjoy)
NameError: name 'Greyjoy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:34:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: Stark")
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: Lannister")
elif(o=="veado"):
	print("Entrada: ", o)
	print("Casa: Baratheon")
elif(o=="dragao"):
	print("Entrada: ", o)
	print("Casa: Targaryen")
elif(o=="rosa"):
	print("Entrada: ", o)
	print("Casa: Tyrell")
elif(o=="sol"):
	print("Entrada: ", o)
	print("Casa: Martell")
elif(o=="lula"):
	print("Entrada: ", o)
	print("Casa: Greyjoy")
elif(o=="esfolado"):
	print("Entrada: ", o)
	print("Casa: Bolton")
elif(o=="turta"):
	print("Entrada: ", o)
	print("Casa: Tully")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:34:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: Stark")
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: Lannister")
elif(o=="veado"):
	print("Entrada: ", o)
	print("Casa: Baratheon")
elif(o=="dragao"):
	print("Entrada: ", o)
	print("Casa: Targaryen")
elif(o=="rosa"):
	print("Entrada: ", o)
	print("Casa: Tyrell")
elif(o=="sol"):
	print("Entrada: ", o)
	print("Casa: Martell")
elif(o=="lula"):
	print("Entrada: ", o)
	print("Casa: Greyjoy")
elif(o=="esfolado"):
	print("Entrada: ", o)
	print("Casa: Bolton")
elif(o=="turta"):
	print("Entrada: ", o)
	print("Casa: Tully")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:35:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: Stark")
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: Lannister")
elif(o=="veado"):
	print("Entrada: ", o)
	print("Casa: Baratheon")
elif(o=="dragao"):
	print("Entrada: ", o)
	print("Casa: Targaryen")
elif(o=="rosa"):
	print("Entrada: ", o)
	print("Casa: Tyrell")
elif(o=="sol"):
	print("Entrada: ", o)
	print("Casa: Martell")
elif(o=="lula"):
	print("Entrada: ", o)
	print("Casa: Greyjoy")
elif(o=="esfolado"):
	print("Entrada: ", o)
	print("Casa: Bolton")
elif(o=="turta"):
	print("Entrada: ", o)
	print("Casa: Tully")
-- EXECUTION TIME:
0.19475
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:35:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: Stark")
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: Lannister")
elif(o=="veado"):
	print("Entrada: ", o)
	print("Casa: Baratheon")
elif(o=="dragao"):
	print("Entrada: ", o)
	print("Casa: Targaryen")
elif(o=="rosa"):
	print("Entrada: ", o)
	print("Casa: Tyrell")
elif(o=="sol"):
	print("Entrada: ", o)
	print("Casa: Martell")
elif(o=="lula"):
	print("Entrada: ", o)
	print("Casa: Greyjoy")
elif(o=="esfolado"):
	print("Entrada: ", o)
	print("Casa: Bolton")
elif(o=="turta"):
	print("Entrada: ", o)
	print("Casa: Tully")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:36:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: Stark")
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: Lannister")
elif(o=="veado"):
	print("Entrada: ", o)
	print("Casa: Baratheon")
elif(o=="dragao"):
	print("Entrada: ", o)
	print("Casa: Targaryen")
elif(o=="rosa"):
	print("Entrada: ", o)
	print("Casa: Tyrell")
elif(o=="sol"):
	print("Entrada: ", o)
	print("Casa: Martell")
elif(o=="lula"):
	print("Entrada: ", o)
	print("Casa: Greyjoy")
elif(o=="esfolado"):
	print("Entrada: ", o)
	print("Casa: Bolton")
elif(o=="turta"):
	print("Entrada: ", o)
	print("Casa: Tully")
else:
	print("Entrada: ", o)
	print("Brasao invalido")
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:36:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
o= input("Animal: ")

if(o=="lobo"):
	print("Entrada: ", o)
	print("Casa: Stark")
elif(o=="leao"):
	print("Entrada: ", o)
	print("Casa: Lannister")
elif(o=="veado"):
	print("Entrada: ", o)
	print("Casa: Baratheon")
elif(o=="dragao"):
	print("Entrada: ", o)
	print("Casa: Targaryen")
elif(o=="rosa"):
	print("Entrada: ", o)
	print("Casa: Tyrell")
elif(o=="sol"):
	print("Entrada: ", o)
	print("Casa: Martell")
elif(o=="lula"):
	print("Entrada: ", o)
	print("Casa: Greyjoy")
elif(o=="esfolado"):
	print("Entrada: ", o)
	print("Casa: Bolton")
elif(o=="turta"):
	print("Entrada: ", o)
	print("Casa: Tully")
else:
	print("Entrada: ", o)
	print("Brasao invalido")
-- EXECUTION TIME:
0.12849
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
